--- a/Homework-8/index8.html
+++ b/Homework-8/index8.html
@@ -6,6 +6,8 @@
     <like rel="stylesheet" type="text/css" href="stylesheet.css">
 
 <body>
+  elem.setAttribute("style", "border: 2px solid red");
+
   <center>
 
 <div class="cognito">
@@ -14,23 +16,26 @@
 </div>
 
 <form action="success.html" type="post">
-  First Name: <input type="text" id="fname"><br>
+  First Name: <input type="text" id="fname" required><br>
   Last Name: <input type="text" id="1name"><br>
   Email:  &#160 &#160<input type="text" id="Email"<br>
   <br><br>&#160
+  <script>
 
+  window.alert("Welcome to My Page");
+</script>
+<br>
+<p>Do you agree to the terms and conditions?</p>
+  <input type="radio" name="I Agree to Terms & Conditions" value="terms"
+  <input type="radio" name="terms" value="yes">Yes
+  <input type="radio" name="terms" value="yes">No
+  <input type="submit" value="Submit">
+  <label style="color:red" id="labelFName"></label>
   <br>
-  <p>Do you agree to the terms and conditions?</p>
-    <input type="radio" name="I Agree to Terms & Conditions" value="terms"
-    <input type="radio" name="terms" value="yes">Yes
-    <input type="radio" name="terms" value="yes">No
+</form>
     <!--make buttons alternate when clicked-->
   <br>
-
-<button class="btn btn-primary">Submit</button>
-  <form action="success.html" type="post">
     <!--make button go to success submit-->
-
 
   </center>
 </body>
