--- a/Homework-8/index8.html
+++ b/Homework-8/index8.html
@@ -6,7 +6,7 @@
     <like rel="stylesheet" type="text/css" href="stylesheet.css">
 
 <body>
-  elem.setAttribute("style", "border: 2px solid red");
+
 
   <center>
 
@@ -23,6 +23,8 @@
   <script>
 
   window.alert("Welcome to My Page");
+  elem.setAttribute("style", "border: 2px solid red");
+  /*to get textbox red*/
 </script>
 <br>
 <p>Do you agree to the terms and conditions?</p>
